tried working on the images put in the personal bio and cost

--- a/Pages/Shared/diagrams.html
+++ b/Pages/Shared/diagrams.html
@@ -5,6 +5,13 @@
     <title>Diagrams and Stuff</title>
 </head>
 <body>
+    <div> 
+        <h1>Survey Results (Charts)</h1>
+        <4>Have you ever travelled internationally?</h4>
+        <img src="purple.jpg" alt="chart">
+        <h4>have you ever gotten lost while on those travels?</h4>
+        <img src="pink.jpg" alt="chart">
+    </div>
     <div>
         <h1>Electrical Schematic</h1>
         <img src="electric.jpg" alt="electrical schematic">
@@ -12,6 +19,6 @@
     <div>
         <h1>Flowchart</h1>
         <img src="flow.jpg" alt="flowchart">
-    </div>
+    </div> 
 </body>
 </html>
